# batch-renamer

./: .gitignore  GEMINI.md  README.md  REQUIREMENTS.md  requirements.txt
backend/: .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/33333/: ㅇㅇㅇㅇㄴ
backend/alembic/: env.py
backend/alembic/versions/: 40b75a4ffcc1_.py  43b2e8eb5251_recreate_exclusionpattern_table.py  784ac1e1b9aa_update_extracteddata_model_with_json_.py  98d464063607_add_filechangerequest_and_.py  aa87cdb7e1a5_autogenerate_revision.py  b92b7826c085_add_new_fields_to_extracteddata_model.py
backend/app/: main.py
backend/app/application/: exceptions.py
backend/app/application/use_cases/: index_files.py
backend/app/domain/: base_model.py  custom_types.py
backend/app/domain/exclusion_pattern/: model.py  repository.py
backend/app/domain/extracted_data/: model.py  repository.py
backend/app/domain/file/: model.py  repository.py
backend/app/domain/file_change_pattern/: model.py  repository.py
backend/app/domain/file_change_request/: file_change_request_target_model.py  model.py  repository.py
backend/app/infrastructure/: app_config.py
backend/app/infrastructure/config/: settings_base.py  settings_dev.py  settings_local.py  settings_prod.py
backend/app/infrastructure/persistence/: exclusion_pattern_repository_impl.py  extracted_data_repository_impl.py  file_change_pattern_repository_impl.py  file_change_request_repository_impl.py  file_repository_impl.py
backend/app/infrastructure/services/: file_operation_service.py
backend/app/interfaces/: exception_handler.py
(+64 files in other folders)
