[project]
name = "batch-rename"
version = "0.1.0"
description = "Backend for the Clear File application"
authors = [{ name = "Dain", email = "dain@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "click==8.2.1",
    "fastapi==0.116.1",
    "h11==0.16.0",
    "idna==3.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.42",
    "sqlmodel==0.0.24",
    "starlette==0.47.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
    "alembic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-mock",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]
